# k1insights

./: .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  fly.toml  pyproject.toml  setup.cfg  supervisord.conf
.github/workflows/: cd.yaml  ci.yaml  main.yml
src/k1insights/: __init__.py
src/k1insights/backend/: clubspeed.py  watchers.py
src/k1insights/common/: constants.py  db.py
src/k1insights/frontend/: __init__.py  index.py  kart.py  location.py
src/k1insights/frontend/static/css/: main.css
src/k1insights/frontend/templates/: base.html  index.html  kart.html  location.html
src/k1insights/tools/: add_racer.py  create_db.py
src/k1stats/backend/: clubspeed.py  watchers.py
src/k1stats/common/: constants.py  db.py
src/k1stats/frontend/: __init__.py  index.py  kart.py  location.py
src/k1stats/frontend/static/css/: main.css
src/k1stats/frontend/templates/: base.html  index.html  location.html
src/k1stats/tools/: add_racer.py  create_db.py
test/: conftest.py
test/backend/: test_clubspeed.py  test_watchers.py
test/common/: test_constants.py  test_db.py
test/data/: bad_fk.db  bad_tegridy.db  ball.html  drift.html  final.html  grid.html  history.html  junior.html  practice.html  qual.html  standard.html  unk_cond.html  unk_type.html
test/frontend/: test_index.py  test_kart.py  test_location.py
test/tools/: test_add_racer.py  test_create_db.py
